# valsoft-demo

./: .env.example  .gitignore  ASPIRE_SOP.md  CONTEXT_MAP.md  DEPLOYMENT.md  Makefile  PREREQUISITES.md  README.md  base.sln  init-dev.sh  inventory_local.dump  redeploy.sh  setup.sh
ai/: Dockerfile  PROJECT_TEMPLATE.md  README.md  extractor.py  pyproject.toml  quick_test.py  schemas.py  standard-operating-procedure.md  test_discovery.py  test_extractor.py  test_gemini.py  test_specific_product.py  worker.py
ai/protos/: ai_service.proto
ai/scripts/: find_company_websites.py  import_companies.py
ai/src/: main.py
ai/src/api/: dependencies.py  grpc_server.py  rest.py
ai/src/core/: db.py  engine.py  models.py  ports.py
ai/src/core/cache-first-strategy/: fiscal_registries.json
ai/src/infra/: gemini_adapter.py  local_adapter.py  otel_config.py
ai/src/mcp/: sops_server.py
ai/tests/: conftest.py  test_basics.py
ai/tests/unit/: test_engine.py
backend/: normalize_categories.sql  standard-operating-procedure.md
backend_publish/: Dockerfile  Inventory.API  Inventory.API.deps.json
base.AppHost/: Program.cs  appsettings.json  base.AppHost.csproj
base.ServiceDefaults/: Extensions.cs  base.ServiceDefaults.csproj
docs/: DATABASE_SEARCH_SOP.md  SECURITY_SOP.md  database_schema.sql
frontend/: .gitignore  .prettierignore  .prettierrc  AI_GUIDELINES.md  ARCHITECTURE.md  README.md  STANDARD_TESTING_PROCEDURE.md  angular.json  eslint.config.js  package-lock.json  package.json  playwright.config.ts  standard-operating-procedure.md  tailwind.config.ts  tsconfig.json  (+3 more)
(+85 files in other folders)
